--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,85 @@ google-services.json
 
 # Android Profiling
 *.hprof
+
+Dev / e2wugui / zezze / arbre / dbh2Single Tid Mode
+Zezelight.csproj
+Zezelightusekeralua.sln x
+Est ----
+{De6fcba1-5fe9-488d-ba86-914e54e5cac5} .release
+{De6fcba1-5fe9-488d-ba86-914e54e5cac5} .release
+Endglobalsection
+Globalsection (propriétés de la solution) = Presolution
+HidesolutionNode = false
+Endglobal
+y
+wwww.my
+P
+| Tout CPU. ActiveCfg = release | N'importe quel CP
+| Tout cpu.build. 0 = Libérez n'importe quel processeur
+Endglobalsection
+GOLABALSECTION (ExtensibilityGlobals) = Posts Solution
+Solutionguid = {60d4b87b-f84b-4cfd-9c7b-1f29f735e6d3}
+Endglobalsection
+U
+PROFESSEUR
+Le mana
+
+03 H 28
+@
+github.dev/e2wugui/zeze/tree/DBH2Single Time Mode
+EXPLORATEUR
+✓ Zize (gitubub]
+rammyicos.co
+C Protocole.CS
+CRPC.CS
+C rpCtimeoutExcept ..
+C Service.CS
+C ServiceConf.cs
+C socketoptions.cs
+> Radeau
+> Redirection
+> Sérialiser
+> Services
+> Tikv
+> Transaction
+> Util
+ANNRACE RE> STRUCTURE
+> CHRONOLOGIE
+X GitHub DBH2Single Tid Mode
+Zezelight.csproj
+Zezelightusekeralua.sin
+16
+17
+18
+19
+20
+21
+22
+22
+22
+23
+= Zezelightusekeralua.sln x
+0 a⁰
+24
+25 endglobal
+26
+1147
+www.
+{DE6FCBA1-5FE9-488D-BA86-914E54E5CAC5). Libération | Tout cpu.activecfg = libération | Tout cp {de6fcba1-5fe9-488d-ba86-914e54e5cac5} .release | Tout cpu.build.0 = libération | N'importe quel processeur
+Endglobalsection
+GlobalSection (propriétés de la solution) = Presolution HidesolutionNode = False
+Endglobalsection
+GlobalSection (ExtensibilityGlobals) = PostSolution solutionguid = {60d4b87b-f84b-4cfd-9c7b-1f29f735e6d3} Endglobalsection
+L2, col 3 Taille des tabulations: 4
+UTF-8 avec bom
+Q
+LF
+<0:
+BROUILLON
+Texte Brut Disposition: États-Unis
+...
+4
+<
+O
+|||
